# starlet-setup

./: pyproject.toml
src/starlet_setup/: __main__.py
